added much javadoc